# ynab-mcp

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.agents/rules/python/: library-vs-scripts.md  load-dotenv-first.md  python-best-practices.md  uv-python.md
.agents/rules/react/: bun-react.md  react-best-practices.md
.agents/rules/shared/: bugbot-auto-review.md  checkpoint-commits.md  default-to-shareable-rules.md  fail-hard-not-warn.md  fetch-library-docs-first.md  gh-issue-dependencies.md  harness-agnostic-skills.md  issue-card-brevity.md  never-delete-only-close.md  no-orphan-issues.md  push-every-commit.md  sync-core-dev-skills-upstream.md  use-bundled-skill-scripts.md  worktree-for-planning.md
.agents/skills/build-from-issue/: SKILL.md
.agents/skills/clean-up-kanban/: SKILL.md
.agents/skills/plan-issues/: SKILL.md
.agents/skills/plan-issues/references/: gridium-mcp-routing.md
.agents/skills/pr-check/: SKILL.md
.agents/skills/resolve-pr-concerns/: SKILL.md
.agents/skills/resolve-pr-concerns/scripts/: wait_for_pr_checks.sh
.agents/skills/review-skill/: SKILL.md
.agents/skills/review-skill/scripts/: validate.py
.agents/skills/run-tests/: SKILL.md
.claude/: settings.json
.claude/hooks/: claude_permission_hook.sh  run-tests-on-stop.sh
.cursor/: BUGBOT.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/repo-settings/: merge-settings.json  ruleset.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-09-dual-stack-cicd-testing-template.md  2026-07-03-harness-agnostic-skills.md  2026-07-12-core-ynab-mcp-server.md  2026-07-12-find-amazon-transactions.md  2026-07-12-overspend-underspend-flagging-plan.md  2026-07-12-payee-pattern-lookup.md  2026-07-12-transaction-budget-write-tools.md  2026-07-14-retry-backoff-ynab-api.md
docs/superpowers/specs/: 2026-06-09-cicd-testing-template-design.md  2026-07-03-harness-agnostic-skills-design.md  2026-07-12-core-ynab-mcp-server-design.md  2026-07-12-find-amazon-transactions-design.md  2026-07-12-overspend-underspend-flagging-design.md  2026-07-12-payee-pattern-lookup-design.md  2026-07-12-transaction-budget-write-tools-design.md  2026-07-13-find-amazon-transactions-live-test-kit.md  2026-07-14-retry-backoff-ynab-api-design.md  2026-07-15-retry-backoff-live-test-kit.md
mk/: shared.mk
scripts/: __init__.py  amazon_login.py  apply_repo_settings.py  init_template.py
src/example_app/: greeting.py
src/ynab_mcp/: __init__.py  amazon_client.py  amazon_matching.py  client.py  config.py  errors.py  server.py
src/ynab_mcp/tools/: __init__.py  accounts.py  budgeted_amount.py  budgets.py  categories.py  find_amazon_transactions.py  lookup.py  months.py  payee_patterns.py  payees.py  payees_write.py  scheduled_transactions.py  spend_analysis.py  transactions.py  transactions_write.py
stacks/python/: README.md  pyproject.toml
stacks/python/src/example_app/: __init__.py
stacks/python/tests/: test_greeting.py
stacks/react/: Makefile  README.md  biome.json  package.json  tsconfig.json  vitest.config.ts
stacks/react/src/: App.test.tsx  App.tsx  main.tsx
stacks/react/src/components/: Button.test.tsx
tests/: test_amazon_client.py  test_amazon_matching.py  test_client.py  test_config.py  test_e2e_server.py  test_errors.py  test_greeting.py  test_retry_integration.py  test_server.py  test_tools_accounts.py  test_tools_budgeted_amount.py  test_tools_budgets.py  test_tools_categories.py  test_tools_find_amazon_transactions.py  test_tools_lookup.py  test_tools_months.py  test_tools_payee_patterns.py  test_tools_payees.py  test_tools_payees_write.py  test_tools_scheduled_transactions.py  test_tools_spend_analysis.py  test_tools_transactions.py  test_tools_transactions_write.py
tests/template/: conftest.py  test_apply_repo_settings.py  test_init_helpers.py  test_initialize.py
