[project]
name = "agentic-ai-powered-repo-tooling"
version = "0.0.0"
description = "Template-only tooling: tests for the init/apply machinery. Removed or replaced at `make init`."
requires-python = ">=3.13.5,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "black>=26.3.0",
    "ruff>=0.15.20",
    "mypy>=1.13.0",
    "pytest>=9.1.1",
    "pytest-xdist>=3.6.1",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
extend-select = ["E501", "W", "D"]
extend-ignore = ["D107"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "D100", "D101", "D102", "D103", "D104"]
"scripts/**" = ["E402", "E501", "D100"]

[tool.mypy]
python_version = "3.13"
files = ["scripts", "tests"]
ignore_missing_imports = true
show_error_codes = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests/template"]
addopts = "-n auto"
pythonpath = ["."]
