[project]
name = "ynab-mcp"
version = "0.1.0"
description = "MCP server for YNAB"
readme = "README.md"
requires-python = ">=3.13.5,<3.14"
dependencies = [
    "fastmcp>=3.4.4",
    "pydantic>=2.12",
    "python-dotenv>=1.2",
    "ynab>=4.2.0",
]

[project.scripts]
ynab-mcp = "ynab_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ynab_mcp"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.3.0",
    "mypy>=1.13.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.15.20",
]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
files = ["src", "tests"]
ignore_missing_imports = true
show_error_codes = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
extend-select = ["E501", "W", "D"]
extend-ignore = ["D107"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "D100", "D101", "D102", "D103", "D104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-n auto -m 'not e2e and not integration'"
markers = [
    "integration: marks tests that call live external APIs",
    "e2e: marks tests that exercise the full pipeline against live services",
]
